--- a/src/CashFlow.Api/CashFlow.Api.csproj
+++ b/src/CashFlow.Api/CashFlow.Api.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.7"/>
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
@@ -16,6 +17,10 @@
       <ProjectReference Include="..\CashFlow.Communication\CashFlow.Communication.csproj" />
       <ProjectReference Include="..\CashFlow.Exception\CashFlow.Exception.csproj" />
       <ProjectReference Include="..\CashFlow.Infrastructure\CashFlow.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Controllers\" />
     </ItemGroup>
 
 </Project>
